--- a/LSTM-time-series-stock-price-forecasting/stock_price_forecasting.ipynb
+++ b/LSTM-time-series-stock-price-forecasting/stock_price_forecasting.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"train.csv\",parse_dates=[\"Date\"],index_col=[0])"
+    "df=pd.read_csv(\"data/train.csv\",parse_dates=[\"Date\"],index_col=[0])"
    ]
   },
   {
@@ -1740,7 +1740,7 @@
     }
    ],
    "source": [
-    "df_30_days_future=pd.read_csv(\"test.csv\",parse_dates=[\"Date\"],index_col=[0])\n",
+    "df_30_days_future=pd.read_csv(\"data/test.csv\",parse_dates=[\"Date\"],index_col=[0])\n",
     "df_30_days_future.shape"
    ]
   },
@@ -2402,7 +2402,7 @@
     }
    ],
    "source": [
-    "my_model.save('Model_future_value.h5')\n",
+    "my_model.save('model/Model_future_value.h5')\n",
     "print('Model Saved!')"
    ]
   },
@@ -2438,7 +2438,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "scalerfile = 'scaler_model_future_value.pkl'\n",
+    "scalerfile = 'model/scaler_model_future_value.pkl'\n",
     "pickle.dump(scaler, open(scalerfile, 'wb'))"
    ]
   }
